<resources>
    <string name="SERVIDOR_LOCAL">http://192.168.0.70/login/consumirPosicion.php?</string>
    <string name="app_name">¿Dónde está mi bondi?</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="nav_header_title">¿Donde esta mi Bondi?</string>
    <string name="nav_header_subtitle">Ahorra tiempo</string>
    <string name="nav_header_desc">Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="prototipo">Tus notificaciones apareceran aquí.</string>
    <string name="nav_map">Mapa</string>
    <string name="nav_likSube">SUBE</string>
    <string name="nav_linkTarifas">Tarifas</string>
    <string name="nav_ajustes">Ajustes</string>
    <string name="nav_comentario">Comentarios</string>
    <string name="nav_acc">Solicitar accesibilidad</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Alarmas</string>
    <string name="pref_title_new_message_notifications">Activar notificaciones</string>
    <string name="pref_title_ringtone">Tono de alarma</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrar</string>
    <string name="pref_title_distance">Distancia</string>
    <string name="pref_title_time">Tiempo</string>
    <string name="alarma_en_parada">Alarma en paradaCercanaAlPasajero</string>
    <string name="id_linea">Linea</string>
    <string name="ramal">Ramal</string>
    <string name="serverRestBase">http://dondeestamibondi.online</string>
    <string name="GET_UBICACION">http://dondeestamibondi.online/appPasajero/getUbicacionServicios.php</string>
    <string name="GET_RECORRIDOS">http://dondeestamibondi.online/appPasajero/getRecorridos.php</string>
    <string name="nav_destino">Alarma</string>
    <string name="etiqueta">Etiqueta</string>
    <string name="guardar_alarma">Guardar Alarma</string>
    <string name="title_activity_warn">Warn</string>
    <string name="warn_button">¡Enterado!</string>
    <string name="warn_content">Estas llegando a tu parada</string>
    <string name="notificar_a_patir_de">NOTIFICAR A PATIR DE</string>
    <string name="comunicacion">Comunicacion</string>
    <string name="social">Social</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="style_json">[
  {
    "featureType": "poi",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "geometry",
    "stylers": [
      {
        "visibility": "on"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]</string>

    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="links_de_inter_s">Links de interés</string>
    <string name="d_nde_est_mi_bondi">¿Dónde está mi bondi?</string>
    <string name="linea">Linea:</string>
    <string name="ramal_com">Ramal:</string>
    <string name="comentario_co">Comentario:</string>
    <string name="hint_com">Ingrese su comentario aqui...</string>
    <string name="cargando_l_neas">Cargando líneas...</string>
    <string-array name="pref_time_titles">
        <item>3 minutos</item>
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>20 minutos</item>
        <item>25 minutos</item>
        <item>30 minutos</item>
    </string-array>
    <string-array name="pref_distance_titles">
        <item>Cerca (100 metros)</item>
        <item>Media distancia (300 metros)</item>
        <item>Lejos (500 metros)</item>
    </string-array>
    <string-array  name="pref_time_value">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="pref_distance_value">
        <item>100</item>
        <item>300</item>
        <item>500</item>
    </string-array >


    <string-array name="pref_parameter_titles">
        <item>Distancia</item>
        <item>Tiempo estimado</item>
    </string-array>

    <string-array name="pref_parameter_values">
        <item>distance</item>
        <item>time</item>
    </string-array>


    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

</resources>
