<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <PreferenceCategory android:title="Alarma">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    android:dependency="notifications_new_message"
    android:key="notifications_new_message_vibrate"
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/pref_title_vibrate" />
    <PreferenceCategory android:title="Activar cuando">

    </PreferenceCategory>
    <MultiSelectListPreference
        android:defaultValue="@array/pref_parametre_titles"
        android:entries="@array/pref_distance_titles"
        android:entryValues="@array/pref_time_titles"
        android:key="multi_select_list_preference_1"
        android:title="Multi select list preference" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_distance_titles"
        android:entryValues="@array/pref_distance_titles"
        android:key="list_preference_distance"
        android:title="@string/pref_title_distance" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_time_titles"
        android:entryValues="@array/pref_distance_titles"
        android:key="list_preference_time"
        android:title="@string/pref_title_time" />

</PreferenceScreen>
